--- a/themes/ohia/css/newsletter.css
+++ b/themes/ohia/css/newsletter.css
@@ -1,12 +1,15 @@
 /* Ohia theme newsletter stylesheet  */
+:root {
+  --bs-nav-link-color: $leaf;
+}
 body {
-  background: #242424;
-  color: #e9ecef;
-  font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+  background: #2d2d3a;
+  color: #DEE1E6;
+  font-family: "Alegreya Sans", Helvetica, Arial, sans-serif;
   padding: 15px;
 }
 a, a:visited {
-  color: #fd0006;
+  color: #80A60F;
   text-decoration: none;
 }
 a:hover {
@@ -14,11 +17,12 @@ a:hover {
   text-decoration: none;
 }
 h1, h2, h3, h4, h5, h6, .h1, .h2, .h3, .h4, .h5, .h6 {
+  font-family: "Alegreya Sans SC", sans-serif;
   font-weight: 500;
 }
 .card {
   margin-bottom: 1.5;
-  background-color: #030511;
+  background-color: transparent;
   border: 1px solid transparent;
   border-radius: 0.375rem;
 }
